--- a/libs/jwt/.eslintrc.json
+++ b/libs/jwt/.eslintrc.json
@@ -8,17 +8,33 @@
 				"plugin:@nrwl/nx/angular",
 				"plugin:@angular-eslint/template/process-inline-templates"
 			],
-			"parserOptions": { "project": ["libs/jwt/tsconfig.*?.json"] },
+			"parserOptions": {
+				"project": ["libs/jwt/tsconfig.*?.json"]
+			},
 			"rules": {
 				"@angular-eslint/directive-selector": [
 					"error",
-					{ "type": "attribute", "prefix": "aegis-auth", "style": "camelCase" }
+					{
+						"type": "attribute",
+						"prefix": "aegis-auth",
+						"style": "camelCase"
+					}
 				],
 				"@angular-eslint/component-selector": [
 					"error",
-					{ "type": "element", "prefix": "aegis-auth", "style": "kebab-case" }
+					{
+						"type": "element",
+						"prefix": "aegis-auth",
+						"style": "kebab-case"
+					}
 				],
-				"quotes": ["error", "single", { "avoidEscape": true }]
+				"quotes": [
+					"error",
+					"single",
+					{
+						"avoidEscape": true
+					}
+				]
 			}
 		},
 		{
