--- a/libs/ngrx/.eslintrc.json
+++ b/libs/ngrx/.eslintrc.json
@@ -8,15 +8,25 @@
 				"plugin:@nrwl/nx/angular",
 				"plugin:@angular-eslint/template/process-inline-templates"
 			],
-			"parserOptions": { "project": ["libs/ngrx/tsconfig.*?.json"] },
+			"parserOptions": {
+				"project": ["libs/ngrx/tsconfig.*?.json"]
+			},
 			"rules": {
 				"@angular-eslint/directive-selector": [
 					"error",
-					{ "type": "attribute", "prefix": "aegis-auth", "style": "camelCase" }
+					{
+						"type": "attribute",
+						"prefix": "aegis-auth",
+						"style": "camelCase"
+					}
 				],
 				"@angular-eslint/component-selector": [
 					"error",
-					{ "type": "element", "prefix": "aegis-auth", "style": "kebab-case" }
+					{
+						"type": "element",
+						"prefix": "aegis-auth",
+						"style": "kebab-case"
+					}
 				]
 			}
 		},
