fix: fix migration errors

--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
 		"self-destruct": "rimraf ./dist ./coverage ./.codacy-coverage ./cache ./node-modules ./package-lock.json ./yarn.lock ./pnpm-lock.yaml",
 		"test": "nx run-many --all --target test",
 		"test:skip-cache": "nx run-many --all --target test --skip-nx-cache",
-		"lint": "nx workspace-lint && ng lint",
-		"lint:css": "stylelint --allow-empty-input --syntax=css ./**/*.css",
-		"lint:scss": "stylelint --allow-empty-input --syntax=scss ./**/*.scss",
+		"lint": "nx workspace-lint && nx lint",
+		"lint:css": "stylelint --allow-empty-input --syntax=css {apps,libs}/**/*.css",
+		"lint:scss": "stylelint --allow-empty-input --syntax=scss {apps,libs}/**/*.scss",
 		"lint:md": "markdownlint --ignore 'CHANGELOG.md' --ignore-path '.gitignore' .",
 		"lint:rmd": "remark .",
 		"lint:format": "prettier --check .",
@@ -110,6 +110,7 @@
 		"@fortawesome/free-solid-svg-icons": "^5.15.3",
 		"@nrwl/angular": "12.10.1",
 		"core-js": "~3.11.2",
+		"js-base64": "^3.7.2",
 		"rxjs": "~6.5.3",
 		"tslib": "^2.2.0",
 		"zone.js": "~0.11.4"
