--- a/package.json
+++ b/package.json
@@ -57,12 +57,12 @@
 		"build:ngrx": "nx build ngrx-demo --configuration production --stats-json",
 		"hoist:core": "cpy ./dist/apps/core-demo/* ./dist",
 		"clean": "rimraf ./dist ./coverage ./.codacy-coverage ./cache",
-		"self-destruct": "rimraf ./dist ./coverage ./.codacy-coverage ./cache ./node-modules ./package-lock.json ./yarn.lock ./pnpm-lock.yaml",
+		"nuke": "rimraf ./dist ./coverage ./.codacy-coverage ./cache ./node-modules ./package-lock.json ./yarn.lock ./pnpm-lock.yaml",
 		"test": "nx run-many --all --target test",
 		"test:skip-cache": "nx run-many --all --target test --skip-nx-cache",
-		"lint": "nx workspace-lint && ng lint",
-		"lint:css": "stylelint --allow-empty-input --syntax=css ./**/*.css",
-		"lint:scss": "stylelint --allow-empty-input --syntax=scss ./**/*.scss",
+		"lint": "nx workspace-lint && nx lint",
+		"lint:css": "stylelint --allow-empty-input --syntax=css {apps,libs}/**/*.css",
+		"lint:scss": "stylelint --allow-empty-input --syntax=scss {apps,libs}/**/*.scss",
 		"lint:md": "markdownlint --ignore 'CHANGELOG.md' --ignore-path '.gitignore' .",
 		"lint:rmd": "remark .",
 		"lint:format": "prettier --check .",
@@ -104,22 +104,23 @@
 		"@angular/platform-browser": "12.2.16",
 		"@angular/platform-browser-dynamic": "12.2.16",
 		"@angular/router": "12.2.16",
-		"@fortawesome/angular-fontawesome": "^0.8.2",
+		"@fortawesome/angular-fontawesome": "^0.9.0",
 		"@fortawesome/fontawesome-svg-core": "^1.2.35",
 		"@fortawesome/free-brands-svg-icons": "^5.15.3",
 		"@fortawesome/free-solid-svg-icons": "^5.15.3",
 		"@nrwl/angular": "12.10.1",
 		"core-js": "~3.11.2",
-		"rxjs": "~6.5.3",
+		"js-base64": "^3.7.2",
+		"rxjs": "~7.5.5",
 		"tslib": "^2.2.0",
 		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "12.2.17",
-		"@angular-eslint/builder": "^4.2.0",
+		"@angular-eslint/builder": "12.7.0",
 		"@angular-eslint/eslint-plugin": "12.3.1",
 		"@angular-eslint/eslint-plugin-template": "12.3.1",
-		"@angular-eslint/schematics": "^4.2.0",
+		"@angular-eslint/schematics": "12.7.0",
 		"@angular-eslint/template-parser": "12.3.1",
 		"@angular/cli": "12.2.17",
 		"@angular/compiler-cli": "12.2.16",
@@ -139,7 +140,7 @@
 		"@typescript-eslint/eslint-plugin": "4.31.2",
 		"@typescript-eslint/parser": "4.31.2",
 		"compression-webpack-plugin": "^6.1.1",
-		"cpy-cli": "^3.1.1",
+		"cpy-cli": "^4.1.0",
 		"cypress": "^6.0.1",
 		"dotenv": "10.0.0",
 		"eslint": "~7.25.0",
@@ -154,8 +155,8 @@
 		"jest": "27.2.3",
 		"jest-preset-angular": "10.0.1",
 		"lint-staged": "~10.5.4",
-		"markdownlint": "~0.23.1",
-		"markdownlint-cli": "~0.27.1",
+		"markdownlint": "^0.25.1",
+		"markdownlint-cli": "^0.31.1",
 		"ng-packagr": "12.2.7",
 		"npm-check-updates": "~11.5.10",
 		"pinst": "^2.1.6",
@@ -176,9 +177,9 @@
 		"stylelint-prettier": "~1.2.0",
 		"ts-jest": "27.0.5",
 		"ts-node": "9.1.1",
-		"typedoc": "~0.20.36",
+		"typedoc": "~0.22.15",
 		"typescript": "4.3.5",
 		"webpack-bundle-analyzer": "~4.4.1",
-		"yaml-lint": "~1.2.4"
+		"yaml-lint": "^1.6.0"
 	}
 }
