chore: ran nx 13 migrations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,7 @@
 	},
 	"editor.fontLigatures": true,
 	"editor.mouseWheelZoom": true,
-	"debug.javascript.usePreview": true,
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"files.exclude": {
 		"**/.git": true,
 		"**/.DS_Store": true
