--- a/package.json
+++ b/package.json
@@ -159,7 +159,12 @@
 		"markdownlint-cli": "^0.31.1",
 		"ng-packagr": "13.3.1",
 		"npm-check-updates": "~12.5.11",
+		"nx": "14.0.5",
 		"pinst": "^3.0.0",
+		"postcss": "^8.3.9",
+		"postcss-import": "^14.0.2",
+		"postcss-preset-env": "^6.7.0",
+		"postcss-url": "^10.1.1",
 		"prettier": "2.6.2",
 		"remark": "~14.0.2",
 		"remark-cli": "~10.0.1",
