fix: stylelint migration

--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
 		"test": "nx run-many --all --target test",
 		"test:skip-cache": "nx run-many --all --target test --skip-nx-cache",
 		"lint": "nx workspace-lint && nx lint",
-		"lint:css": "stylelint --allow-empty-input --syntax=css {apps,libs}/**/*.css",
-		"lint:scss": "stylelint --allow-empty-input --syntax=scss {apps,libs}/**/*.scss",
+		"lint:css": "stylelint --allow-empty-input {apps,libs}/**/*.css",
+		"lint:scss": "stylelint --allow-empty-input --customSyntax=postcss-scss {apps,libs}/**/*.scss",
 		"lint:md": "markdownlint --ignore 'CHANGELOG.md' --ignore-path '.gitignore' .",
 		"lint:rmd": "remark .",
 		"lint:format": "prettier --check .",
@@ -164,6 +164,7 @@
 		"postcss": "^8.3.9",
 		"postcss-import": "^14.0.2",
 		"postcss-preset-env": "^6.7.0",
+		"postcss-scss": "^4.0.4",
 		"postcss-url": "^10.1.1",
 		"prettier": "2.6.2",
 		"remark": "~14.0.2",
