--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+	"deno.enable": false,
 	"editor.formatOnSave": true,
 	"editor.autoIndent": "full",
 	"editor.tabCompletion": "off",
@@ -31,7 +32,7 @@
 	},
 	"editor.fontLigatures": true,
 	"editor.mouseWheelZoom": true,
-	"debug.javascript.usePreview": true,
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"files.exclude": {
 		"**/.git": true,
 		"**/.DS_Store": true
