--- a/libs/jwt/package.json
+++ b/libs/jwt/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@aegis-auth/jwt",
 	"description": "Angular JWT authentication library",
-	"version": "12.0.0",
+	"version": "13.0.0",
 	"license": "MIT",
 	"author": {
 		"email": "alexaegis@gmail.com",
@@ -29,9 +29,9 @@
 		"javascript"
 	],
 	"peerDependencies": {
-		"@angular/common": "^12.*.*",
-		"@angular/core": "^12.*.*",
-		"@angular/router": "^12.*.*",
+		"@angular/common": "13.*.*",
+		"@angular/core": "13.*.*",
+		"@angular/router": "13.*.*",
 		"rxjs": "7.*.*"
 	},
 	"dependencies": {
