--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "aegis-auth",
 	"description": "Angular authentication libraries",
-	"version": "12.0.0",
+	"version": "13.0.0",
 	"license": "MIT",
 	"author": {
 		"email": "alexaegis@gmail.com",
@@ -61,8 +61,8 @@
 		"test": "nx run-many --all --target test",
 		"test:skip-cache": "nx run-many --all --target test --skip-nx-cache",
 		"lint": "nx workspace-lint && nx lint",
-		"lint:css": "stylelint --allow-empty-input --syntax=css {apps,libs}/**/*.css",
-		"lint:scss": "stylelint --allow-empty-input --syntax=scss {apps,libs}/**/*.scss",
+		"lint:css": "stylelint --allow-empty-input {apps,libs}/**/*.css",
+		"lint:scss": "stylelint --allow-empty-input --customSyntax=postcss-scss {apps,libs}/**/*.scss",
 		"lint:md": "markdownlint --ignore 'CHANGELOG.md' --ignore-path '.gitignore' .",
 		"lint:rmd": "remark .",
 		"lint:format": "prettier --check .",
@@ -94,92 +94,98 @@
 		"workspace-generator": "nx workspace-generator"
 	},
 	"dependencies": {
-		"@angular/animations": "12.2.16",
-		"@angular/cdk": "12.2.13",
-		"@angular/common": "12.2.16",
-		"@angular/compiler": "12.2.16",
-		"@angular/core": "12.2.16",
-		"@angular/forms": "12.2.16",
-		"@angular/material": "12.2.13",
-		"@angular/platform-browser": "12.2.16",
-		"@angular/platform-browser-dynamic": "12.2.16",
-		"@angular/router": "12.2.16",
-		"@fortawesome/angular-fontawesome": "^0.9.0",
-		"@fortawesome/fontawesome-svg-core": "^1.2.35",
-		"@fortawesome/free-brands-svg-icons": "^5.15.3",
-		"@fortawesome/free-solid-svg-icons": "^5.15.3",
-		"@nrwl/angular": "12.10.1",
-		"core-js": "~3.11.2",
+		"@angular/animations": "13.3.5",
+		"@angular/cdk": "13.3.5",
+		"@angular/common": "13.3.5",
+		"@angular/compiler": "13.3.5",
+		"@angular/core": "13.3.5",
+		"@angular/forms": "13.3.5",
+		"@angular/material": "13.3.5",
+		"@angular/platform-browser": "13.3.5",
+		"@angular/platform-browser-dynamic": "13.3.5",
+		"@angular/router": "13.3.5",
+		"@fortawesome/angular-fontawesome": "^0.10.2",
+		"@fortawesome/fontawesome-svg-core": "^6.1.1",
+		"@fortawesome/free-brands-svg-icons": "^6.1.1",
+		"@fortawesome/free-solid-svg-icons": "^6.1.1",
+		"@nrwl/angular": "14.0.5",
+		"core-js": "~3.22.4",
 		"js-base64": "^3.7.2",
 		"rxjs": "~7.5.5",
-		"tslib": "^2.2.0",
-		"zone.js": "~0.11.4"
+		"tslib": "^2.4.0",
+		"zone.js": "0.11.5"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "12.2.17",
-		"@angular-eslint/builder": "12.7.0",
-		"@angular-eslint/eslint-plugin": "12.3.1",
-		"@angular-eslint/eslint-plugin-template": "12.3.1",
-		"@angular-eslint/schematics": "12.7.0",
-		"@angular-eslint/template-parser": "12.3.1",
-		"@angular/cli": "12.2.17",
-		"@angular/compiler-cli": "12.2.16",
-		"@angular/language-service": "12.2.16",
-		"@commitlint/cli": "~12.1.1",
-		"@commitlint/config-conventional": "~12.1.2",
-		"@nrwl/cypress": "12.10.1",
-		"@nrwl/eslint-plugin-nx": "12.10.1",
-		"@nrwl/jest": "12.10.1",
-		"@nrwl/linter": "12.10.1",
-		"@nrwl/node": "12.10.1",
-		"@nrwl/web": "12.10.1",
-		"@nrwl/workspace": "12.10.1",
-		"@types/jest": "27.0.2",
+		"@angular-devkit/build-angular": "13.3.4",
+		"@angular-eslint/builder": "13.2.1",
+		"@angular-eslint/eslint-plugin": "13.2.1",
+		"@angular-eslint/eslint-plugin-template": "13.2.1",
+		"@angular-eslint/schematics": "13.2.1",
+		"@angular-eslint/template-parser": "13.2.1",
+		"@angular/cli": "13.3.4",
+		"@angular/compiler-cli": "13.3.5",
+		"@angular/language-service": "13.3.5",
+		"@commitlint/cli": "~16.2.4",
+		"@commitlint/config-conventional": "~16.2.4",
+		"@nrwl/cypress": "14.0.5",
+		"@nrwl/eslint-plugin-nx": "14.0.5",
+		"@nrwl/jest": "14.0.5",
+		"@nrwl/linter": "14.0.5",
+		"@nrwl/node": "14.0.5",
+		"@nrwl/web": "14.0.5",
+		"@nrwl/workspace": "14.0.5",
+		"@types/jest": "27.4.1",
 		"@types/js-base64": "~3.0.0",
-		"@types/node": "15.0.1",
-		"@typescript-eslint/eslint-plugin": "4.31.2",
-		"@typescript-eslint/parser": "4.31.2",
-		"compression-webpack-plugin": "^6.1.1",
+		"@types/node": "17.0.31",
+		"@typescript-eslint/eslint-plugin": "5.18.0",
+		"@typescript-eslint/parser": "5.18.0",
+		"compression-webpack-plugin": "^9.2.0",
 		"cpy-cli": "^4.1.0",
-		"cypress": "^6.0.1",
-		"dotenv": "10.0.0",
-		"eslint": "~7.25.0",
-		"eslint-config-prettier": "~8.3.0",
-		"eslint-plugin-cypress": "^2.11.2",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jsdoc": "^33.0.0",
+		"cypress": "^9.6.0",
+		"dotenv": "16.0.0",
+		"eslint": "8.14.0",
+		"eslint-config-prettier": "~8.5.0",
+		"eslint-plugin-cypress": "^2.12.1",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsdoc": "^39.2.9",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
-		"eslint-plugin-prettier": "~3.4.0",
+		"eslint-plugin-prettier": "~4.0.0",
 		"eslint-plugin-react": "latest",
-		"husky": "^6.0.0",
-		"jest": "27.2.3",
-		"jest-preset-angular": "10.0.1",
-		"lint-staged": "~10.5.4",
+		"husky": "^7.0.4",
+		"jest": "27.5.1",
+		"jest-preset-angular": "11.1.2",
+		"lint-staged": "~12.4.1",
 		"markdownlint": "^0.25.1",
 		"markdownlint-cli": "^0.31.1",
-		"ng-packagr": "12.2.7",
-		"npm-check-updates": "~11.5.10",
-		"pinst": "^2.1.6",
+		"ng-packagr": "13.3.1",
+		"npm-check-updates": "~12.5.11",
+		"nx": "14.0.5",
+		"pinst": "^3.0.0",
+		"postcss": "^8.4.13",
+		"postcss-import": "^14.1.0",
+		"postcss-preset-env": "^7.5.0",
+		"postcss-scss": "^4.0.4",
+		"postcss-url": "^10.1.3",
 		"prettier": "2.6.2",
-		"remark": "~13.0.0",
-		"remark-cli": "~9.0.0",
-		"remark-lint": "~8.0.0",
-		"remark-lint-maximum-line-length": "~2.0.3",
-		"remark-preset-lint-consistent": "~4.0.0",
-		"remark-preset-lint-recommended": "~5.0.0",
+		"remark": "~14.0.2",
+		"remark-cli": "~10.0.1",
+		"remark-lint": "~9.1.1",
+		"remark-lint-maximum-line-length": "~3.1.2",
+		"remark-preset-lint-consistent": "~5.1.1",
+		"remark-preset-lint-recommended": "~6.1.2",
 		"rimraf": "~3.0.2",
-		"rollup": "~2.46.0",
-		"rollup-plugin-gzip": "~2.5.0",
+		"rollup": "~2.71.1",
+		"rollup-plugin-gzip": "~3.0.1",
 		"rollup-plugin-terser": "~7.0.2",
-		"standard-version": "~9.2.0",
-		"stylelint": "~13.13.1",
-		"stylelint-config-prettier": "~8.0.2",
-		"stylelint-prettier": "~1.2.0",
-		"ts-jest": "27.0.5",
-		"ts-node": "9.1.1",
+		"standard-version": "~9.3.2",
+		"stylelint": "~14.8.1",
+		"stylelint-config-prettier": "~9.0.3",
+		"stylelint-prettier": "~2.0.0",
+		"ts-jest": "27.1.4",
+		"ts-node": "10.7.0",
 		"typedoc": "~0.22.15",
-		"typescript": "4.3.5",
-		"webpack-bundle-analyzer": "~4.4.1",
+		"typescript": "4.6.4",
+		"webpack-bundle-analyzer": "~4.5.0",
 		"yaml-lint": "^1.6.0"
 	}
 }
