--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 		"build:ngrx": "nx build ngrx-demo --configuration production --stats-json",
 		"hoist:core": "cpy 'dist/apps/core-demo/*' 'dist'",
 		"clean": "rimraf ./dist ./coverage ./.codacy-coverage ./cache",
-		"nuke": "rimraf ./dist ./coverage ./.codacy-coverage ./cache ./node-modules ./package-lock.json ./yarn.lock ./pnpm-lock.yaml",
+		"nuke": "rimraf ./dist ./coverage ./.codacy-coverage ./cache ./node_modules ./package-lock.json ./yarn.lock ./pnpm-lock.yaml",
 		"test": "nx run-many --all --target test",
 		"test:skip-cache": "nx run-many --all --target test --skip-nx-cache",
 		"lint": "nx workspace-lint && nx lint",
@@ -81,11 +81,10 @@
 		"format:check": "nx format:check",
 		"ncu": "ncu -u",
 		"typedoc": "typedoc --tsconfig ./tsconfig.base.json --out ./dist/typedoc",
-		"update": "ng update @nrwl/workspace",
-		"update:all": "nx update --all --force",
+		"update": "nx migrate latest",
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
-		"postinstall": "husky install && node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+		"postinstall": "husky install && node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main --first-only --create-ivy-entry-points",
 		"release": "standard-version",
 		"release:minor": "standard-version --release-as minor",
 		"release:major": "standard-version --release-as major",
@@ -94,21 +93,21 @@
 		"workspace-generator": "nx workspace-generator"
 	},
 	"dependencies": {
-		"@angular/animations": "13.3.5",
-		"@angular/cdk": "13.3.5",
-		"@angular/common": "13.3.5",
-		"@angular/compiler": "13.3.5",
-		"@angular/core": "13.3.5",
-		"@angular/forms": "13.3.5",
-		"@angular/material": "13.3.5",
-		"@angular/platform-browser": "13.3.5",
-		"@angular/platform-browser-dynamic": "13.3.5",
-		"@angular/router": "13.3.5",
+		"@angular/animations": "14.0.4",
+		"@angular/cdk": "14.0.4",
+		"@angular/common": "14.0.4",
+		"@angular/compiler": "14.0.4",
+		"@angular/core": "14.0.4",
+		"@angular/forms": "14.0.4",
+		"@angular/material": "14.0.4",
+		"@angular/platform-browser": "14.0.4",
+		"@angular/platform-browser-dynamic": "14.0.4",
+		"@angular/router": "14.0.4",
 		"@fortawesome/angular-fontawesome": "^0.10.2",
 		"@fortawesome/fontawesome-svg-core": "^6.1.1",
 		"@fortawesome/free-brands-svg-icons": "^6.1.1",
 		"@fortawesome/free-solid-svg-icons": "^6.1.1",
-		"@nrwl/angular": "14.0.5",
+		"@nrwl/angular": "14.3.6",
 		"core-js": "~3.23.3",
 		"js-base64": "^3.7.2",
 		"rxjs": "~7.5.5",
@@ -116,34 +115,34 @@
 		"zone.js": "0.11.5"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "13.3.7",
+		"@angular-devkit/build-angular": "14.0.4",
 		"@angular-eslint/builder": "13.2.1",
 		"@angular-eslint/eslint-plugin": "13.2.1",
 		"@angular-eslint/eslint-plugin-template": "13.2.1",
 		"@angular-eslint/schematics": "13.2.1",
 		"@angular-eslint/template-parser": "13.2.1",
-		"@angular/cli": "13.3.4",
-		"@angular/compiler-cli": "13.3.5",
-		"@angular/language-service": "13.3.5",
+		"@angular/cli": "~14.0.0",
+		"@angular/compiler-cli": "14.0.4",
+		"@angular/language-service": "14.0.4",
 		"@commitlint/cli": "~17.0.2",
 		"@commitlint/config-conventional": "~16.2.4",
-		"@nrwl/cypress": "14.0.5",
-		"@nrwl/eslint-plugin-nx": "14.1.9",
-		"@nrwl/jest": "14.0.5",
-		"@nrwl/linter": "14.0.5",
-		"@nrwl/node": "14.1.9",
-		"@nrwl/web": "14.0.5",
-		"@nrwl/workspace": "14.0.5",
+		"@nrwl/cypress": "14.3.6",
+		"@nrwl/eslint-plugin-nx": "14.3.6",
+		"@nrwl/jest": "14.3.6",
+		"@nrwl/linter": "14.3.6",
+		"@nrwl/node": "14.3.6",
+		"@nrwl/web": "14.3.6",
+		"@nrwl/workspace": "14.3.6",
 		"@types/jest": "27.4.1",
 		"@types/js-base64": "~3.0.0",
 		"@types/node": "17.0.31",
-		"@typescript-eslint/eslint-plugin": "5.18.0",
-		"@typescript-eslint/parser": "5.18.0",
+		"@typescript-eslint/eslint-plugin": "5.24.0",
+		"@typescript-eslint/parser": "5.24.0",
 		"compression-webpack-plugin": "^9.2.0",
 		"cpy-cli": "^4.1.0",
 		"cypress": "^9.6.0",
 		"dotenv": "16.0.0",
-		"eslint": "8.14.0",
+		"eslint": "8.15.0",
 		"eslint-config-prettier": "~8.5.0",
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-import": "^2.26.0",
@@ -157,16 +156,16 @@
 		"lint-staged": "~12.4.1",
 		"markdownlint": "^0.25.1",
 		"markdownlint-cli": "^0.31.1",
-		"ng-packagr": "13.3.1",
+		"ng-packagr": "14.0.2",
 		"npm-check-updates": "~12.5.11",
-		"nx": "14.0.5",
+		"nx": "14.3.6",
 		"pinst": "^3.0.0",
 		"postcss": "^8.4.13",
-		"postcss-import": "^14.1.0",
-		"postcss-preset-env": "^7.5.0",
+		"postcss-import": "14.1.0",
+		"postcss-preset-env": "7.5.0",
 		"postcss-scss": "^4.0.4",
-		"postcss-url": "^10.1.3",
-		"prettier": "2.6.2",
+		"postcss-url": "10.1.3",
+		"prettier": "2.7.1",
 		"remark": "~14.0.2",
 		"remark-cli": "~10.0.1",
 		"remark-lint": "~9.1.1",
@@ -182,9 +181,9 @@
 		"stylelint-config-prettier": "~9.0.3",
 		"stylelint-prettier": "~2.0.0",
 		"ts-jest": "27.1.4",
-		"ts-node": "10.8.0",
+		"ts-node": "10.8.1",
 		"typedoc": "~0.22.15",
-		"typescript": "4.6.4",
+		"typescript": "4.7.4",
 		"webpack-bundle-analyzer": "~4.5.0",
 		"yaml-lint": "^1.6.0"
 	}
