--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "aegis-auth",
 	"description": "Angular authentication libraries",
-	"version": "13.0.0",
+	"version": "14.0.0",
 	"license": "MIT",
 	"author": {
 		"email": "alexaegis@gmail.com",
@@ -57,10 +57,10 @@
 		"build:ngrx": "nx build ngrx-demo --configuration production --stats-json",
 		"hoist:core": "cpy 'dist/apps/core-demo/*' 'dist'",
 		"clean": "rimraf ./dist ./coverage ./.codacy-coverage ./cache",
-		"nuke": "rimraf ./dist ./coverage ./.codacy-coverage ./cache ./node-modules ./package-lock.json ./yarn.lock ./pnpm-lock.yaml",
+		"nuke": "rimraf ./dist ./coverage ./.codacy-coverage ./cache ./node_modules ./package-lock.json ./yarn.lock ./pnpm-lock.yaml",
 		"test": "nx run-many --all --target test",
 		"test:skip-cache": "nx run-many --all --target test --skip-nx-cache",
-		"lint": "nx workspace-lint && nx lint",
+		"lint": "nx run-many --all --target=lint",
 		"lint:css": "stylelint --allow-empty-input {apps,libs}/**/*.css",
 		"lint:scss": "stylelint --allow-empty-input --customSyntax=postcss-scss {apps,libs}/**/*.scss",
 		"lint:md": "markdownlint --ignore 'CHANGELOG.md' --ignore-path '.gitignore' .",
@@ -81,11 +81,10 @@
 		"format:check": "nx format:check",
 		"ncu": "ncu -u",
 		"typedoc": "typedoc --tsconfig ./tsconfig.base.json --out ./dist/typedoc",
-		"update": "ng update @nrwl/workspace",
-		"update:all": "nx update --all --force",
+		"update": "nx migrate latest",
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
-		"postinstall": "husky install && node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+		"postinstall": "husky install && node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main --first-only --create-ivy-entry-points",
 		"release": "standard-version",
 		"release:minor": "standard-version --release-as minor",
 		"release:major": "standard-version --release-as major",
@@ -94,98 +93,98 @@
 		"workspace-generator": "nx workspace-generator"
 	},
 	"dependencies": {
-		"@angular/animations": "13.3.5",
-		"@angular/cdk": "13.3.5",
-		"@angular/common": "13.3.5",
-		"@angular/compiler": "13.3.5",
-		"@angular/core": "13.3.5",
-		"@angular/forms": "13.3.5",
-		"@angular/material": "13.3.5",
-		"@angular/platform-browser": "13.3.5",
-		"@angular/platform-browser-dynamic": "13.3.5",
-		"@angular/router": "13.3.5",
-		"@fortawesome/angular-fontawesome": "^0.10.2",
+		"@angular/animations": "14.0.4",
+		"@angular/cdk": "14.0.4",
+		"@angular/common": "14.0.4",
+		"@angular/compiler": "14.0.4",
+		"@angular/core": "14.0.4",
+		"@angular/forms": "14.0.4",
+		"@angular/material": "14.0.4",
+		"@angular/platform-browser": "14.0.4",
+		"@angular/platform-browser-dynamic": "14.0.4",
+		"@angular/router": "14.0.4",
+		"@fortawesome/angular-fontawesome": "^0.11.1",
 		"@fortawesome/fontawesome-svg-core": "^6.1.1",
 		"@fortawesome/free-brands-svg-icons": "^6.1.1",
 		"@fortawesome/free-solid-svg-icons": "^6.1.1",
-		"@nrwl/angular": "14.0.5",
+		"@nrwl/angular": "14.3.6",
 		"core-js": "~3.23.3",
 		"js-base64": "^3.7.2",
 		"rxjs": "~7.5.5",
 		"tslib": "^2.4.0",
-		"zone.js": "0.11.5"
+		"zone.js": "0.11.6"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "13.3.7",
-		"@angular-eslint/builder": "13.2.1",
-		"@angular-eslint/eslint-plugin": "13.2.1",
-		"@angular-eslint/eslint-plugin-template": "13.2.1",
-		"@angular-eslint/schematics": "13.2.1",
-		"@angular-eslint/template-parser": "13.2.1",
-		"@angular/cli": "13.3.4",
-		"@angular/compiler-cli": "13.3.5",
-		"@angular/language-service": "13.3.5",
-		"@commitlint/cli": "~17.0.2",
-		"@commitlint/config-conventional": "~16.2.4",
-		"@nrwl/cypress": "14.0.5",
-		"@nrwl/eslint-plugin-nx": "14.1.9",
-		"@nrwl/jest": "14.0.5",
-		"@nrwl/linter": "14.0.5",
-		"@nrwl/node": "14.1.9",
-		"@nrwl/web": "14.0.5",
-		"@nrwl/workspace": "14.0.5",
+		"@angular-devkit/build-angular": "14.0.4",
+		"@angular-eslint/builder": "14.0.0",
+		"@angular-eslint/eslint-plugin": "14.0.0",
+		"@angular-eslint/eslint-plugin-template": "14.0.0",
+		"@angular-eslint/schematics": "14.0.0",
+		"@angular-eslint/template-parser": "14.0.0",
+		"@angular/cli": "~14.0.4",
+		"@angular/compiler-cli": "14.0.4",
+		"@angular/language-service": "14.0.4",
+		"@commitlint/cli": "~17.0.3",
+		"@commitlint/config-conventional": "~17.0.3",
+		"@nrwl/cypress": "14.3.6",
+		"@nrwl/eslint-plugin-nx": "14.3.6",
+		"@nrwl/jest": "14.3.6",
+		"@nrwl/linter": "14.3.6",
+		"@nrwl/node": "14.3.6",
+		"@nrwl/web": "14.3.6",
+		"@nrwl/workspace": "14.3.6",
 		"@types/jest": "27.4.1",
 		"@types/js-base64": "~3.0.0",
-		"@types/node": "17.0.31",
-		"@typescript-eslint/eslint-plugin": "5.18.0",
-		"@typescript-eslint/parser": "5.18.0",
-		"compression-webpack-plugin": "^9.2.0",
+		"@types/node": "18.0.0",
+		"@typescript-eslint/eslint-plugin": "5.24.0",
+		"@typescript-eslint/parser": "5.24.0",
+		"compression-webpack-plugin": "^10.0.0",
 		"cpy-cli": "^4.1.0",
 		"cypress": "^9.6.0",
-		"dotenv": "16.0.0",
-		"eslint": "8.14.0",
+		"dotenv": "16.0.1",
+		"eslint": "8.18.0",
 		"eslint-config-prettier": "~8.5.0",
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsdoc": "^39.3.2",
+		"eslint-plugin-jsdoc": "^39.3.3",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
-		"eslint-plugin-prettier": "~4.0.0",
+		"eslint-plugin-prettier": "~4.2.1",
 		"eslint-plugin-react": "latest",
 		"husky": "^8.0.1",
 		"jest": "27.5.1",
 		"jest-preset-angular": "11.1.2",
-		"lint-staged": "~12.4.1",
-		"markdownlint": "^0.25.1",
+		"lint-staged": "~13.0.3",
+		"markdownlint": "^0.26.0",
 		"markdownlint-cli": "^0.31.1",
-		"ng-packagr": "13.3.1",
+		"ng-packagr": "14.0.2",
 		"npm-check-updates": "~15.0.1",
-		"nx": "14.0.5",
+		"nx": "14.3.6",
 		"pinst": "^3.0.0",
-		"postcss": "^8.4.13",
-		"postcss-import": "^14.1.0",
-		"postcss-preset-env": "^7.5.0",
+		"postcss": "^8.4.14",
+		"postcss-import": "14.1.0",
+		"postcss-preset-env": "7.7.2",
 		"postcss-scss": "^4.0.4",
-		"postcss-url": "^10.1.3",
-		"prettier": "2.6.2",
+		"postcss-url": "10.1.3",
+		"prettier": "2.7.1",
 		"remark": "~14.0.2",
-		"remark-cli": "~10.0.1",
+		"remark-cli": "~11.0.0",
 		"remark-lint": "~9.1.1",
 		"remark-lint-maximum-line-length": "~3.1.2",
 		"remark-preset-lint-consistent": "~5.1.1",
 		"remark-preset-lint-recommended": "~6.1.2",
 		"rimraf": "~3.0.2",
-		"rollup": "~2.75.4",
+		"rollup": "~2.75.7",
 		"rollup-plugin-gzip": "~3.0.1",
 		"rollup-plugin-terser": "~7.0.2",
 		"standard-version": "~9.5.0",
-		"stylelint": "~14.8.1",
+		"stylelint": "~14.9.1",
 		"stylelint-config-prettier": "~9.0.3",
 		"stylelint-prettier": "~2.0.0",
 		"ts-jest": "27.1.4",
-		"ts-node": "10.8.0",
-		"typedoc": "~0.22.15",
-		"typescript": "4.6.4",
+		"ts-node": "10.8.1",
+		"typedoc": "~0.23.2",
+		"typescript": "4.7.4",
 		"webpack-bundle-analyzer": "~4.5.0",
-		"yaml-lint": "^1.6.0"
+		"yaml-lint": "^1.7.0"
 	}
 }
