--- a/package.json
+++ b/package.json
@@ -51,16 +51,15 @@
 		"start:core": "nx serve core-demo",
 		"start:jwt": "nx serve jwt-demo",
 		"start:ngrx": "nx serve ngrx-demo",
-		"build": "nx affected:build --all --configuration production",
+		"build": "nx run-many --all --parallel 4 --target build --configuration production",
 		"build:core": "nx build core-demo --configuration production --stats-json",
 		"build:jwt": "nx build jwt-demo --configuration production --stats-json",
 		"build:ngrx": "nx build ngrx-demo --configuration production --stats-json",
 		"hoist:core": "cpy 'dist/apps/core-demo/*' 'dist'",
 		"clean": "rimraf ./dist ./coverage ./.codacy-coverage ./cache",
 		"nuke": "rimraf ./dist ./coverage ./.codacy-coverage ./cache ./node_modules ./package-lock.json ./yarn.lock ./pnpm-lock.yaml",
-		"test": "nx run-many --all --target test",
-		"test:skip-cache": "nx run-many --all --target test --skip-nx-cache",
-		"lint": "nx run-many --all --target=lint",
+		"test": "nx run-many --all --parallel 4 --target test",
+		"lint": "nx run-many --all --parallel 4 --target lint",
 		"lint:css": "stylelint --allow-empty-input {apps,libs}/**/*.css",
 		"lint:scss": "stylelint --allow-empty-input --customSyntax=postcss-scss {apps,libs}/**/*.scss",
 		"lint:md": "markdownlint --ignore 'CHANGELOG.md' --ignore-path '.gitignore' .",
@@ -93,77 +92,78 @@
 		"workspace-generator": "nx workspace-generator"
 	},
 	"dependencies": {
-		"@angular/animations": "14.0.4",
-		"@angular/cdk": "14.0.4",
-		"@angular/common": "14.0.4",
-		"@angular/compiler": "14.0.4",
-		"@angular/core": "14.0.4",
-		"@angular/forms": "14.0.4",
-		"@angular/material": "14.0.4",
-		"@angular/platform-browser": "14.0.4",
-		"@angular/platform-browser-dynamic": "14.0.4",
-		"@angular/router": "14.0.4",
+		"@angular/animations": "^14.2.4",
+		"@angular/cdk": "^14.2.3",
+		"@angular/common": "^14.2.4",
+		"@angular/compiler": "^14.2.4",
+		"@angular/core": "^14.2.4",
+		"@angular/forms": "^14.2.4",
+		"@angular/material": "^14.2.3",
+		"@angular/platform-browser": "^14.2.4",
+		"@angular/platform-browser-dynamic": "^14.2.4",
+		"@angular/router": "^14.2.4",
 		"@fortawesome/angular-fontawesome": "^0.11.1",
-		"@fortawesome/fontawesome-svg-core": "^6.1.1",
-		"@fortawesome/free-brands-svg-icons": "^6.1.1",
-		"@fortawesome/free-solid-svg-icons": "^6.1.2",
-		"@nrwl/angular": "14.3.6",
-		"core-js": "~3.25.3",
+		"@fortawesome/fontawesome-svg-core": "^6.2.0",
+		"@fortawesome/free-brands-svg-icons": "^6.2.0",
+		"@fortawesome/free-solid-svg-icons": "^6.2.0",
+		"@nrwl/angular": "14.8.2",
+		"core-js": "~3.25.5",
 		"js-base64": "^3.7.2",
-		"rxjs": "~7.5.5",
+		"rxjs": "~7.5.7",
 		"tslib": "^2.4.0",
-		"zone.js": "0.11.7"
+		"zone.js": "0.11.8"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "14.0.4",
-		"@angular-eslint/builder": "14.0.0",
-		"@angular-eslint/eslint-plugin": "14.0.0",
-		"@angular-eslint/eslint-plugin-template": "14.0.2",
-		"@angular-eslint/schematics": "14.0.0",
-		"@angular-eslint/template-parser": "14.0.0",
-		"@angular/cli": "~14.0.4",
-		"@angular/compiler-cli": "14.0.4",
-		"@angular/language-service": "14.0.4",
-		"@commitlint/cli": "~17.0.3",
-		"@commitlint/config-conventional": "~17.0.3",
-		"@nrwl/cypress": "14.3.6",
-		"@nrwl/eslint-plugin-nx": "14.3.6",
-		"@nrwl/jest": "14.3.6",
-		"@nrwl/linter": "14.3.6",
-		"@nrwl/node": "14.3.6",
-		"@nrwl/web": "14.3.6",
-		"@nrwl/workspace": "14.3.6",
-		"@types/jest": "27.4.1",
+		"@angular-devkit/build-angular": "^14.2.4",
+		"@angular-eslint/builder": "^14.1.2",
+		"@angular-eslint/eslint-plugin": "^14.1.2",
+		"@angular-eslint/eslint-plugin-template": "^14.1.2",
+		"@angular-eslint/schematics": "^14.1.2",
+		"@angular-eslint/template-parser": "^14.1.2",
+		"@angular/cli": "~14.2.4",
+		"@angular/compiler-cli": "14.2.4",
+		"@angular/language-service": "14.2.4",
+		"@commitlint/cli": "~17.1.2",
+		"@commitlint/config-conventional": "~17.1.0",
+		"@nrwl/cypress": "14.8.2",
+		"@nrwl/eslint-plugin-nx": "14.8.2",
+		"@nrwl/jest": "14.8.2",
+		"@nrwl/linter": "14.8.2",
+		"@nrwl/node": "14.8.2",
+		"@nrwl/web": "14.8.2",
+		"@nrwl/workspace": "14.8.2",
+		"@types/jest": "29.1.1",
 		"@types/js-base64": "~3.3.1",
-		"@types/node": "18.0.0",
-		"@typescript-eslint/eslint-plugin": "5.32.0",
-		"@typescript-eslint/parser": "5.24.0",
+		"@types/node": "18.8.1",
+		"@typescript-eslint/eslint-plugin": "5.39.0",
+		"@typescript-eslint/parser": "5.39.0",
 		"compression-webpack-plugin": "^10.0.0",
-		"cpy-cli": "^4.1.0",
-		"cypress": "^9.6.0",
-		"dotenv": "16.0.1",
-		"eslint": "8.18.0",
+		"cpy-cli": "^4.2.0",
+		"cypress": "^10.9.0",
+		"dotenv": "16.0.3",
+		"eslint": "8.24.0",
 		"eslint-config-prettier": "~8.5.0",
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsdoc": "^39.3.4",
+		"eslint-plugin-jsdoc": "^39.3.6",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"eslint-plugin-prettier": "~4.2.1",
 		"eslint-plugin-react": "latest",
 		"husky": "^8.0.1",
-		"jest": "27.5.1",
-		"jest-preset-angular": "11.1.2",
+		"jest": "28.1.3",
+		"jest-environment-jsdom": "28.1.1",
+		"jest-preset-angular": "12.2.2",
 		"lint-staged": "~13.0.3",
-		"markdownlint": "^0.26.0",
-		"markdownlint-cli": "^0.31.1",
-		"ng-packagr": "14.0.2",
-		"npm-check-updates": "~16.0.5",
-		"nx": "14.3.6",
+		"markdownlint": "^0.26.2",
+		"markdownlint-cli": "^0.32.2",
+		"ng-packagr": "14.2.1",
+		"npm-check-updates": "~16.3.8",
+		"nx": "14.8.2",
 		"pinst": "^3.0.0",
-		"postcss": "^8.4.14",
-		"postcss-import": "14.1.0",
-		"postcss-preset-env": "7.7.2",
-		"postcss-scss": "^4.0.4",
+		"postcss": "^8.4.17",
+		"postcss-import": "15.0.0",
+		"postcss-preset-env": "7.8.2",
+		"postcss-scss": "^4.0.5",
 		"postcss-url": "10.1.3",
 		"prettier": "2.7.1",
 		"remark": "~14.0.2",
@@ -173,18 +173,18 @@
 		"remark-preset-lint-consistent": "~5.1.1",
 		"remark-preset-lint-recommended": "~6.1.2",
 		"rimraf": "~3.0.2",
-		"rollup": "~2.77.2",
+		"rollup": "~2.79.1",
 		"rollup-plugin-gzip": "~3.0.1",
 		"rollup-plugin-terser": "~7.0.2",
 		"standard-version": "~9.5.0",
-		"stylelint": "~14.9.1",
+		"stylelint": "~14.13.0",
 		"stylelint-config-prettier": "~9.0.3",
 		"stylelint-prettier": "~2.0.0",
-		"ts-jest": "27.1.4",
-		"ts-node": "10.8.1",
-		"typedoc": "~0.23.10",
-		"typescript": "4.7.4",
-		"webpack-bundle-analyzer": "~4.5.0",
+		"ts-jest": "28.0.8",
+		"ts-node": "10.9.1",
+		"typedoc": "~0.23.15",
+		"typescript": "4.8.4",
+		"webpack-bundle-analyzer": "~4.6.1",
 		"yaml-lint": "^1.7.0"
 	}
 }
