deploy: 251cfce9ce74d53179fae69771ab77d2a52a521e

--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -32,7 +32,7 @@
   "peerDependencies": {
     "@angular/common": "14.*.*",
     "@angular/core": "14.*.*",
-    "@angular/platform-browser-dynamic": "14.0.4"
+    "@angular/platform-browser-dynamic": "^14.2.4"
   },
   "module": "fesm2015/aegis-auth-core.mjs",
   "es2020": "fesm2020/aegis-auth-core.mjs",
