--- a/package.json
+++ b/package.json
@@ -92,21 +92,21 @@
 		"workspace-generator": "nx workspace-generator"
 	},
 	"dependencies": {
-		"@angular/animations": "^14.2.4",
-		"@angular/cdk": "^14.2.3",
-		"@angular/common": "^14.2.4",
-		"@angular/compiler": "^14.2.4",
-		"@angular/core": "^14.2.4",
-		"@angular/forms": "^14.2.4",
-		"@angular/material": "^14.2.3",
-		"@angular/platform-browser": "^14.2.4",
-		"@angular/platform-browser-dynamic": "^14.2.4",
-		"@angular/router": "^14.2.4",
+		"@angular/animations": "15.0.2",
+		"@angular/cdk": "15.0.1",
+		"@angular/common": "15.0.2",
+		"@angular/compiler": "15.0.2",
+		"@angular/core": "15.0.2",
+		"@angular/forms": "15.0.2",
+		"@angular/material": "15.0.1",
+		"@angular/platform-browser": "15.0.2",
+		"@angular/platform-browser-dynamic": "15.0.2",
+		"@angular/router": "15.0.2",
 		"@fortawesome/angular-fontawesome": "^0.11.1",
 		"@fortawesome/fontawesome-svg-core": "^6.2.0",
 		"@fortawesome/free-brands-svg-icons": "^6.2.0",
 		"@fortawesome/free-solid-svg-icons": "^6.2.0",
-		"@nrwl/angular": "14.8.2",
+		"@nrwl/angular": "15.2.4",
 		"core-js": "~3.25.5",
 		"js-base64": "^3.7.2",
 		"rxjs": "~7.5.7",
@@ -114,24 +114,24 @@
 		"zone.js": "0.11.8"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^14.2.4",
+		"@angular-devkit/build-angular": "15.0.2",
 		"@angular-eslint/builder": "^14.1.2",
 		"@angular-eslint/eslint-plugin": "^14.1.2",
 		"@angular-eslint/eslint-plugin-template": "^14.1.2",
 		"@angular-eslint/schematics": "^14.1.2",
 		"@angular-eslint/template-parser": "^14.1.2",
-		"@angular/cli": "~14.2.4",
-		"@angular/compiler-cli": "14.2.4",
-		"@angular/language-service": "14.2.4",
+		"@angular/cli": "~15.0.0",
+		"@angular/compiler-cli": "15.0.2",
+		"@angular/language-service": "15.0.2",
 		"@commitlint/cli": "~17.1.2",
 		"@commitlint/config-conventional": "~17.1.0",
-		"@nrwl/cypress": "14.8.2",
-		"@nrwl/eslint-plugin-nx": "14.8.2",
-		"@nrwl/jest": "14.8.2",
-		"@nrwl/linter": "14.8.2",
-		"@nrwl/node": "14.8.2",
-		"@nrwl/web": "14.8.2",
-		"@nrwl/workspace": "14.8.2",
+		"@nrwl/cypress": "15.2.4",
+		"@nrwl/eslint-plugin-nx": "15.2.4",
+		"@nrwl/jest": "15.2.4",
+		"@nrwl/linter": "15.2.4",
+		"@nrwl/node": "15.2.4",
+		"@nrwl/web": "15.2.4",
+		"@nrwl/workspace": "15.2.4",
 		"@types/jest": "29.1.1",
 		"@types/js-base64": "~3.3.1",
 		"@types/node": "18.8.1",
@@ -139,7 +139,7 @@
 		"@typescript-eslint/parser": "5.39.0",
 		"compression-webpack-plugin": "^10.0.0",
 		"cpy-cli": "^4.2.0",
-		"cypress": "^10.9.0",
+		"cypress": "^11.0.0",
 		"dotenv": "16.0.3",
 		"eslint": "8.24.0",
 		"eslint-config-prettier": "~8.5.0",
@@ -156,9 +156,9 @@
 		"lint-staged": "~13.0.3",
 		"markdownlint": "^0.26.2",
 		"markdownlint-cli": "^0.32.2",
-		"ng-packagr": "14.2.1",
+		"ng-packagr": "15.0.1",
 		"npm-check-updates": "~16.3.8",
-		"nx": "14.8.2",
+		"nx": "15.2.4",
 		"pinst": "^3.0.0",
 		"postcss": "^8.4.17",
 		"postcss-import": "15.0.0",
