--- a/nx.json
+++ b/nx.json
@@ -3,18 +3,6 @@
 	"affected": {
 		"defaultBase": "master"
 	},
-	"implicitDependencies": {
-		"angular.json": "*",
-		"package.json": {
-			"dependencies": "*",
-			"devDependencies": "*"
-		},
-		"tsconfig.base.json": "*",
-		"tsconfig.json": "*",
-		"eslint.json": "*",
-		".eslintrc.json": "*",
-		"nx.json": "*"
-	},
 	"tasksRunnerOptions": {
 		"default": {
 			"runner": "nx/tasks-runners/default",
@@ -60,7 +48,31 @@
 	"$schema": "./node_modules/nx/schemas/nx-schema.json",
 	"targetDefaults": {
 		"build": {
-			"dependsOn": ["^build"]
+			"dependsOn": ["^build"],
+			"inputs": ["production", "^production"]
+		},
+		"e2e": {
+			"inputs": ["default", "^production"]
+		},
+		"test": {
+			"inputs": ["default", "^production", "{workspaceRoot}/jest.preset.js"]
 		}
+	},
+	"namedInputs": {
+		"default": ["{projectRoot}/**/*", "sharedGlobals"],
+		"sharedGlobals": [
+			"{workspaceRoot}/angular.json",
+			"{workspaceRoot}/tsconfig.base.json",
+			"{workspaceRoot}/tsconfig.json",
+			"{workspaceRoot}/eslint.json",
+			"{workspaceRoot}/nx.json"
+		],
+		"production": [
+			"default",
+			"!{projectRoot}/**/?(*.)+(spec|test).[jt]s?(x)?(.snap)",
+			"!{projectRoot}/tsconfig.spec.json",
+			"!{projectRoot}/jest.config.[jt]s",
+			"!{projectRoot}/.eslintrc.json"
+		]
 	}
 }
