--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aegis-auth/core",
   "description": "Angular authentication libraries",
-  "version": "14.0.0",
+  "version": "15.0.0",
   "license": "MIT",
   "author": {
     "email": "alexaegis@gmail.com",
@@ -32,7 +32,7 @@
   "peerDependencies": {
     "@angular/common": "14.*.*",
     "@angular/core": "14.*.*",
-    "@angular/platform-browser-dynamic": "^14.2.4"
+    "@angular/platform-browser-dynamic": "15.0.2"
   },
   "module": "fesm2015/aegis-auth-core.mjs",
   "es2020": "fesm2020/aegis-auth-core.mjs",
