--- a/libs/jwt/package.json
+++ b/libs/jwt/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aegis-auth/jwt",
   "description": "Angular JWT authentication library",
-  "version": "14.0.0",
+  "version": "15.0.0",
   "license": "MIT",
   "author": {
     "email": "alexaegis@gmail.com",
@@ -33,7 +33,7 @@
     "@angular/core": "14.*.*",
     "@angular/router": "14.*.*",
     "rxjs": "7.*.*",
-    "@angular/platform-browser-dynamic": "^14.2.4"
+    "@angular/platform-browser-dynamic": "15.0.2"
   },
   "dependencies": {
     "js-base64": "^3.7.0",
