--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -4,7 +4,7 @@
 	"version": "15.0.0",
 	"license": "MIT",
 	"author": {
-		"email": "alexaegis@gmail.com",
+		"email": "alexaegis@pm.me",
 		"name": "AlexAegis",
 		"url": "https://www.github.com/AlexAegis"
 	},
