--- a/apps/core-demo-e2e/project.json
+++ b/apps/core-demo-e2e/project.json
@@ -5,7 +5,7 @@
 	"projectType": "application",
 	"targets": {
 		"e2e": {
-			"executor": "@nrwl/cypress:cypress",
+			"executor": "@nx/cypress:cypress",
 			"options": {
 				"cypressConfig": "apps/core-demo-e2e/cypress.json",
 				"tsConfig": "apps/core-demo-e2e/tsconfig.e2e.json",
