--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "15.0.0",
 	"license": "MIT",
 	"author": {
-		"email": "alexaegis@gmail.com",
+		"email": "alexaegis@pm.me",
 		"name": "AlexAegis",
 		"url": "https://www.github.com/AlexAegis"
 	},
@@ -83,7 +83,7 @@
 		"update": "nx migrate latest",
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
-		"postinstall": "husky install && ngcc --properties es2020 browser module main --first-only --create-ivy-entry-points",
+		"postinstall": "husky install",
 		"release": "standard-version",
 		"release:minor": "standard-version --release-as minor",
 		"release:major": "standard-version --release-as major",
@@ -92,62 +92,62 @@
 		"workspace-generator": "nx workspace-generator"
 	},
 	"dependencies": {
-		"@angular/animations": "15.2.0",
-		"@angular/cdk": "15.2.0",
-		"@angular/common": "15.2.0",
-		"@angular/compiler": "15.2.0",
-		"@angular/core": "15.2.0",
-		"@angular/forms": "15.2.0",
-		"@angular/material": "15.2.0",
-		"@angular/platform-browser": "15.2.0",
-		"@angular/platform-browser-dynamic": "15.2.0",
-		"@angular/router": "15.2.0",
+		"@angular/animations": "16.2.12",
+		"@angular/cdk": "16.2.14",
+		"@angular/common": "16.2.12",
+		"@angular/compiler": "16.2.12",
+		"@angular/core": "16.2.12",
+		"@angular/forms": "16.2.12",
+		"@angular/material": "16.2.14",
+		"@angular/platform-browser": "16.2.12",
+		"@angular/platform-browser-dynamic": "16.2.12",
+		"@angular/router": "16.2.12",
 		"@fortawesome/angular-fontawesome": "^0.12.1",
 		"@fortawesome/fontawesome-svg-core": "^6.3.0",
 		"@fortawesome/free-brands-svg-icons": "^6.3.0",
 		"@fortawesome/free-solid-svg-icons": "^6.3.0",
-		"@nrwl/angular": "15.7.2",
+		"@nx/angular": "16.8.1",
 		"core-js": "~3.28.0",
 		"js-base64": "^3.7.5",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.5.0",
-		"zone.js": "0.12.0"
+		"zone.js": "0.13.3"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "15.2.0",
-		"@angular-devkit/core": "~15.2.0",
-		"@angular-devkit/schematics": "~15.2.0",
+		"@angular-devkit/build-angular": "16.2.12",
+		"@angular-devkit/core": "16.2.12",
+		"@angular-devkit/schematics": "16.2.12",
 		"@angular-eslint/builder": "^15.2.1",
-		"@angular-eslint/eslint-plugin": "^15.2.1",
-		"@angular-eslint/eslint-plugin-template": "^15.2.1",
+		"@angular-eslint/eslint-plugin": "16.0.3",
+		"@angular-eslint/eslint-plugin-template": "16.0.3",
 		"@angular-eslint/schematics": "^15.2.1",
-		"@angular-eslint/template-parser": "^15.2.1",
-		"@angular/cli": "~15.2.0",
-		"@angular/compiler-cli": "15.2.0",
-		"@angular/language-service": "15.2.0",
+		"@angular-eslint/template-parser": "16.0.3",
+		"@angular/cli": "~16.2.0",
+		"@angular/compiler-cli": "16.2.12",
+		"@angular/language-service": "16.2.12",
 		"@commitlint/cli": "~17.4.4",
 		"@commitlint/config-conventional": "~17.4.4",
-		"@nrwl/cypress": "15.7.2",
-		"@nrwl/eslint-plugin-nx": "15.7.2",
-		"@nrwl/jest": "15.7.2",
-		"@nrwl/js": "15.7.2",
-		"@nrwl/linter": "15.7.2",
-		"@nrwl/node": "15.7.2",
-		"@nrwl/web": "15.7.2",
-		"@nrwl/workspace": "15.7.2",
-		"@schematics/angular": "~15.2.0",
-		"@types/jest": "29.4.0",
+		"@nx/workspace": "16.8.1",
+		"@nx/js": "16.8.1",
+		"@nx/web": "16.8.1",
+		"@nx/cypress": "16.8.1",
+		"@nx/linter": "16.8.1",
+		"@nx/eslint-plugin": "16.8.1",
+		"@nx/jest": "16.8.1",
+		"@nx/node": "16.8.1",
+		"@schematics/angular": "16.2.12",
+		"@types/jest": "29.4.4",
 		"@types/js-base64": "~3.3.1",
 		"@types/node": "18.14.1",
-		"@typescript-eslint/eslint-plugin": "5.53.0",
-		"@typescript-eslint/parser": "5.53.0",
+		"@typescript-eslint/eslint-plugin": "5.62.0",
+		"@typescript-eslint/parser": "5.62.0",
 		"compression-webpack-plugin": "^10.0.0",
 		"cpy-cli": "^4.2.0",
-		"cypress": "^12.7.0",
+		"cypress": "^13.0.0",
 		"dotenv": "16.0.3",
-		"eslint": "8.35.0",
+		"eslint": "8.46.0",
 		"eslint-config-prettier": "~8.6.0",
-		"eslint-plugin-cypress": "^2.12.1",
+		"eslint-plugin-cypress": "2.15.1",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-jsdoc": "^40.0.0",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
@@ -156,13 +156,13 @@
 		"husky": "^8.0.3",
 		"jest": "29.4.3",
 		"jest-environment-jsdom": "29.4.3",
-		"jest-preset-angular": "13.0.0",
+		"jest-preset-angular": "13.1.6",
 		"lint-staged": "~13.1.2",
 		"markdownlint": "^0.27.0",
 		"markdownlint-cli": "^0.33.0",
-		"ng-packagr": "15.2.2",
+		"ng-packagr": "16.2.3",
 		"npm-check-updates": "~16.7.9",
-		"nx": "15.7.2",
+		"nx": "16.8.1",
 		"pinst": "^3.0.0",
 		"postcss": "^8.4.21",
 		"postcss-import": "15.1.0",
@@ -184,10 +184,10 @@
 		"stylelint": "~15.2.0",
 		"stylelint-config-prettier": "~9.0.5",
 		"stylelint-prettier": "~3.0.0",
-		"ts-jest": "29.0.5",
+		"ts-jest": "29.1.2",
 		"ts-node": "10.9.1",
 		"typedoc": "~0.23.25",
-		"typescript": "4.8.4",
+		"typescript": "5.1.6",
 		"webpack-bundle-analyzer": "~4.8.0",
 		"yaml-lint": "^1.7.0"
 	}
